--- a/main.html
+++ b/main.html
@@ -7,8 +7,80 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+    <table class="main-table">
       <!-- Your code here -->
+
+		<tr>
+			<!-- Nested Table 2 -->
+			<table>
+				<thead>
+					<tr>
+						<th colspan=2>Nested Table 2</th>
+					</tr>
+					<tr>
+						<th>Column 1</th>
+						<th>Column 2</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>abc</td>
+						<td>def</td>
+					</tr>
+				</tbody>
+			</table>
+
+			<!-- Nested Table 1 -->
+			<table>
+				<thead>
+					<tr>
+						<th>Nested Table 1</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<ul>
+								<li>List item 1</li>
+								<li>List item 2</li>
+								<li>List item 3</li>
+							</ul>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</tr>
+
+		<tr>
+			<!-- Nested Table 3 -->
+			<table>
+				<thead>
+					<tr>
+						<th colspan="2">Nested Table 3</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><a href="#">Nested Table</a></td>
+						<td>Demo Continued</td>
+					</tr>
+				</tbody>
+			</table>
+
+			<!-- Nested Table 4 -->
+			<table>
+				<thead>
+					<tr>
+						<th>Nested Table 4</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td class="black-cell">HTML</td>
+					</tr>
+				</tbody>
+			</table>
+		</tr>
     </table>
   </body>
 </html>
